# Vibe-Coding

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  README.md  backend-environment-versions.txt  compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/scripts/: analyze_phase3ii_50_case_failure_causes.py  analyze_phase3ii_major_failures.py  analyze_phase3ii_p1_spec_failures.py  analyze_phase3ii_risk_gate_failures.py  build_unified_rag_jsonl.py  check_agent_state_contract.py  check_agent_state_unified_api_compatibility.py  check_agent_workflow_vs_unified_api.py  check_conversation_api.py  check_conversation_repository.py  check_conversation_schema.py  check_conversation_service.py  check_database_health.py  check_embedding_config_gate.py  check_grounded_render_schemas.py  check_grounded_renderer.py  check_handoff_ticket_api.py  check_handoff_ticket_repository.py  check_handoff_ticket_schema.py  check_handoff_ticket_service.py  check_knowledge_chunk_repository.py  check_knowledge_chunks_schema.py  check_langgraph_installation.py  check_langgraph_workflow_skeleton.py  check_llm_client_contract.py  check_llm_intent_classifier_fallback.py  check_llm_safety_guard.py  check_local_rag_retriever.py  check_logistics_answer_renderer.py  check_logistics_api.py  check_logistics_api_boundaries.py  check_logistics_handler.py  check_logistics_kb_chunk_builder.py  check_logistics_kb_grounded_e2e.py  check_logistics_kb_qdrant_retrieval.py  check_logistics_kb_retriever_adapter.py  (+316 more)
(+198 files in other folders)
