[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-knowledge-agent-platform-backend"
version = "0.1.0"
description = "AI operations agent backend for automotive ball-joint customer service"
requires-python = "==3.11.*"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "sqlalchemy==2.0.50",
    "psycopg[binary]==3.3.4",
    "alembic==1.18.4",
    "qdrant-client==1.18.0",
    "httpx==0.28.1",
    "tenacity==9.1.4",
    "python-multipart==0.0.32",
    "langgraph==1.2.4",
    "openpyxl==3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.16",
    "mypy==2.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
exclude = ["alembic/versions/"]
